testsuite/poke.pkl/funcall-diag-5.pk
/* { dg-do compile } */

32 /* { dg-error "expected function" } */
();
